Test: Update auto create tests

--- a/tests/Fixtures/AutoCreateStore/unstructured-regex-1.html
+++ b/tests/Fixtures/AutoCreateStore/unstructured-regex-1.html
@@ -1,9 +1,9 @@
 <html>
 <head>
+    <meta property="og:image" content="http://localhost/my-image.jpg">
 </head>
 <body>
     <h1>My product</h1>
     <p>$35.00</p>
-    <img src="http://localhost/my-image.jpg" />
 </body>
 </html>
