--- a/tests/Fixtures/AutoCreateStore/unstructured-regex-2.html
+++ b/tests/Fixtures/AutoCreateStore/unstructured-regex-2.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <meta property="og:image" content="http://localhost/my-image.jpg">
 </head>
 <body>
     <h1>My product</h1>
@@ -7,6 +8,5 @@
         This is some random text with a price $35.00 in it.
         We'll also include another price $25 without decimal
     </p>
-    <img src="http://localhost/my-image.jpg" />
 </body>
 </html>
