--- a/tests/Fixtures/AutoCreateStore/unstructured-selector-1.html
+++ b/tests/Fixtures/AutoCreateStore/unstructured-selector-1.html
@@ -4,6 +4,6 @@
 <body>
     <h1>My product</h1>
     <p class="price-box">$35.00</p>
-    <img src="http://localhost/my-image.jpg" />
+    <script>{"hiRes":"http://localhost/my-image.jpg"}</script>
 </body>
 </html>
